# archives

./: .gitignore  AGENT.md  Cargo.toml  Dockerfile  README.md  config.example.toml  docker-compose.prod.yml  docker-compose.yml
backlog/: 008-1735084807-mcp-query-metrics-tool.json  009-1735084808-mcp-error-summary-tool.json  010-1735084809-cli-logs-search.json  011-1735084810-production-dockerfile.json  012-1735084811-data-retention-policies.json  013-1735085000-test-coverage-linting.json  021-1735084820-multi-tenant-support.json  022-1735084821-authentication-api-keys.json  024-1735084823-distributed-traces-support.json
config/: otel-collector.yaml
config/clickhouse/: init.sql
crates/archives-api/: Cargo.toml
crates/archives-api/src/: main.rs
crates/archives-cli/: Cargo.toml
crates/archives-cli/src/: main.rs
crates/archives-cli/src/commands/: logs.rs  metrics.rs  mod.rs  status.rs
crates/archives-common/: Cargo.toml
crates/archives-common/src/: clickhouse.rs  config.rs  config_test.rs  error.rs  error_test.rs  lib.rs  types.rs  types_test.rs
crates/archives-mcp/: Cargo.toml
crates/archives-mcp/src/: main.rs  server.rs  tools.rs
docs/: api-reference.md  architecture.md  deployment.md  mcp-tools.md  why-clickhouse.md
scripts/: ops.sh
