[workspace]
resolver = "2"
members = [
    "crates/archives-common",
    "crates/archives-api",
    "crates/archives-mcp",
    "crates/archives-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Ecosystem Team"]
license = "MIT"
repository = "https://github.com/ecosystem/archives"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.42", features = ["full"] }

# Web framework
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "timeout"] }

# ClickHouse
clickhouse = { version = "0.13", features = ["time", "uuid"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging/Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Configuration
config = "0.14"

# Time
chrono = { version = "0.4", features = ["serde"] }
time = { version = "0.3", features = ["serde"] }

# UUID
uuid = { version = "1.11", features = ["v4", "serde"] }

# HTTP client (for CLI)
reqwest = { version = "0.12", features = ["json"] }

# Testing
tokio-test = "0.4"

# Internal crates
archives-common = { path = "crates/archives-common" }

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
# Allow some pedantic lints that are too strict
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
