[package]
name = "archives-api"
version.workspace = true
edition = "2021"
description = "HTTP API server for Archives log and metrics queries"

[[bin]]
name = "archives-api"
path = "src/main.rs"

[dependencies]
archives-common.workspace = true
tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio-test.workspace = true
