[package]
name = "archives-cli"
version.workspace = true
edition = "2021"
description = "CLI tool for Archives - query logs and metrics from command line"

[[bin]]
name = "archives"
path = "src/main.rs"

[dependencies]
archives-common.workspace = true
tokio.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
reqwest.workspace = true

[dev-dependencies]
tokio-test.workspace = true

[lints]
workspace = true
