[package]
name = "archives-common"
version.workspace = true
edition = "2021"
description = "Shared types, utilities, and ClickHouse client for Archives"

[dependencies]
tokio.workspace = true
clickhouse.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
chrono.workspace = true
time.workspace = true
uuid.workspace = true
config.workspace = true

[dev-dependencies]
tokio-test.workspace = true
