[package]
name = "archives-mcp"
version.workspace = true
edition = "2021"
description = "MCP server for Archives - exposes log/metrics search to ecosystem agents"

[[bin]]
name = "archives-mcp"
path = "src/main.rs"

[dependencies]
archives-common.workspace = true
tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio-test.workspace = true

[lints]
workspace = true
